--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,26 @@ select {
 #answer-container {
   display: flex;
 }
+
+/* inputタグのスタイリング */
+input[type="text"] {
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding: 6px 12px;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  box-sizing: border-box;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+@media (min-width: 992px) {
+  input[type="text"]{
+    width: auto;
+  }
+}
